@@ -201,14 +201,14 @@
 
 		<td class="attributes"><code>
 			 public static
-			false|Array
+			false|string[]
 			&amp;
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_parseFile">#</a>
-		<code><b>parseFile</b>( <span>string <var>$fileName</var></span>, <span>string <var>&amp; $errorMessage</var></span>, <span>boolean <var>$hasHeaders</var> = <span class="php-keyword1">true</span></span>, <span>null|string[] <var>$customHeaders</var> = <span class="php-keyword1">null</span></span> )</code>
+		<code><b>parseFile</b>( <span>string <var>$fileName</var></span>, <span>string <var>&amp; $errorMessage</var></span>, <span>boolean <var>$hasHeaders</var> = <span class="php-keyword1">true</span></span>, <span>boolean <var>$skipEmptyLines</var> = <span class="php-keyword1">false</span></span>, <span>null|string[] <var>$customHeaders</var> = <span class="php-keyword1">null</span></span> )</code>
 
 		<div class="description short">
 			
@@ -226,13 +226,61 @@
 					<dd><code>string</code><br>$errorMessage</dd>
 					<dt><var>$hasHeaders</var></dt>
 					<dd><code>boolean</code><br>$hasHeaders</dd>
+					<dt><var>$skipEmptyLines</var></dt>
+					<dd><code>boolean</code><br>$skipEmptyLines</dd>
 					<dt><var>$customHeaders</var></dt>
 					<dd><code>null|string[]</code><br>$customHeaders</dd>
 				</dl></div>
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>false|Array</code><br />
+					<code>false|string[]</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="parseString" id="_parseString">
+
+		<td class="attributes"><code>
+			 public static
+			false|string[]
+			&amp;
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_parseString">#</a>
+		<code><b>parseString</b>( <span>string <var>$content</var></span>, <span>string <var>&amp; $errorMessage</var></span>, <span>boolean <var>$hasHeaders</var> = <span class="php-keyword1">true</span></span>, <span>boolean <var>$skipEmptyLines</var> = <span class="php-keyword1">false</span></span>, <span>null|string[] <var>$customHeaders</var> = <span class="php-keyword1">null</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$content</var></dt>
+					<dd><code>string</code><br>$content</dd>
+					<dt><var>$errorMessage</var></dt>
+					<dd><code>string</code><br>$errorMessage</dd>
+					<dt><var>$hasHeaders</var></dt>
+					<dd><code>boolean</code><br>$hasHeaders</dd>
+					<dt><var>$skipEmptyLines</var></dt>
+					<dd><code>boolean</code><br>$skipEmptyLines</dd>
+					<dt><var>$customHeaders</var></dt>
+					<dd><code>null|string[]</code><br>$customHeaders</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>false|string[]</code><br />
 				</div>
 
 
