@@ -204,6 +204,8 @@
 			<img src="resources/inherit.png" alt="Extended by" />
 <b><span>DecryptionRule</span></b>			
 			
+			 uses 
+				<a href="class-NegatableRule.html"><span>NegatableRule</span></a>
 			
 		</dd>
 	</dl>
@@ -297,7 +299,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_display">#</a>
-		<code><b>display</b>( )</code>
+		<code><b>display</b>( <span>mixed <var>$padding</var> = <span class="php-num">0</span></span> )</code>
 
 		<div class="description short">
 			
@@ -459,6 +461,20 @@
 	</table>
 
 	<table class="summary used">
+	<caption>Methods used from <a href="class-NegatableRule.html#methods">NegatableRule</a></caption>
+	<tr>
+		<td><code>
+			<a href="class-NegatableRule.html#_API_setDestinationIsNegated"><b>API_setDestinationIsNegated()</b></a>, 
+			<a href="class-NegatableRule.html#_API_setSourceIsNegated"><b>API_setSourceIsNegated()</b></a>, 
+			<a href="class-NegatableRule.html#__readNegationFromXml"><b>_readNegationFromXml()</b></a>, 
+			<a href="class-NegatableRule.html#_destinationIsNegated"><b>destinationIsNegated()</b></a>, 
+			<a href="class-NegatableRule.html#_setDestinationIsNegated"><b>setDestinationIsNegated()</b></a>, 
+			<a href="class-NegatableRule.html#_setSourceIsNegated"><b>setSourceIsNegated()</b></a>, 
+			<a href="class-NegatableRule.html#_sourceIsNegated"><b>sourceIsNegated()</b></a>
+		</code></td>
+	</tr>
+	</table>
+	<table class="summary used">
 	<caption>Methods used from <a href="class-PathableName.html#methods">PathableName</a></caption>
 	<tr>
 		<td><code>
@@ -583,6 +599,15 @@
 	<tr>
 		<td><code>
 			<a href="class-ObjectWithDescription.html#$_description"><var>$_description</var></a>
+		</code></td>
+	</tr>
+	</table>
+	<table class="summary used">
+	<caption>Properties used from <a href="class-NegatableRule.html#properties">NegatableRule</a></caption>
+	<tr>
+		<td><code>
+			<a href="class-NegatableRule.html#$_destinationIsNegated"><var>$_destinationIsNegated</var></a>, 
+			<a href="class-NegatableRule.html#$_sourceIsNegated"><var>$_sourceIsNegated</var></a>
 		</code></td>
 	</tr>
 	</table>
