@@ -692,6 +692,35 @@
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="setDestinationInterface" id="_setDestinationInterface">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_setDestinationInterface">#</a>
+		<code><b>setDestinationInterface</b>( <span>mixed <var>$newDestinationInterface</var></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	<tr data-order="setService" id="_setService">
 
 		<td class="attributes"><code>
@@ -838,6 +867,35 @@
 		<td class="name"><div>
 		<a class="anchor" href="#_display">#</a>
 		<code><b>display</b>( <span>mixed <var>$padding</var> = <span class="php-num">0</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="destinationInterface" id="_destinationInterface">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_destinationInterface">#</a>
+		<code><b>destinationInterface</b>( )</code>
 
 		<div class="description short">
 			
@@ -1004,7 +1062,7 @@
 		</div>
 		</div></td>
 	</tr>
-	<tr data-order="destinationinterfaceIs_set" id="_destinationinterfaceIs_set">
+	<tr data-order="hasDestinationInterface" id="_hasDestinationInterface">
 
 		<td class="attributes"><code>
 			 public 
@@ -1014,8 +1072,8 @@
 		</td>
 
 		<td class="name"><div>
-		<a class="anchor" href="#_destinationinterfaceIs_set">#</a>
-		<code><b>destinationinterfaceIs_set</b>( )</code>
+		<a class="anchor" href="#_hasDestinationInterface">#</a>
+		<code><b>hasDestinationInterface</b>( )</code>
 
 		<div class="description short">
 			
