@@ -186,6 +186,7 @@
 		<h4>Direct Known Users</h4>
 			<a href="class-AppOverrideRule.html">AppOverrideRule</a>, 
 			<a href="class-CaptivePortalRule.html">CaptivePortalRule</a>, 
+			<a href="class-DecryptionRule.html">DecryptionRule</a>, 
 			<a href="class-SecurityRule.html">SecurityRule</a>
 	</div>
 
