@@ -916,6 +916,28 @@
 			</div>
 		</div></td>
 	</tr>
+	<tr data-order="version" id="$version">
+		<td class="attributes"><code>
+			public  
+			mixed
+		</code></td>
+
+		<td class="name">
+<var>$version</var>		</td>
+		<td class="value"><code><span class="php-keyword1">null</span></code></td>
+		<td class="description"><div>
+			<a href="#$version" class="anchor">#</a>
+
+			<div class="description short">
+				
+			</div>
+
+			<div class="description detailed hidden">
+				
+
+			</div>
+		</div></td>
+	</tr>
 	<tr data-order="templateXml" id="$templateXml">
 		<td class="attributes"><code>
 			public static 
