@@ -593,6 +593,8 @@
 
 			<li><div class="notlast"><a href="class-DecryptionRule.html"><span>DecryptionRule</span></a>
 			
+			 uses 
+				<a href="class-NegatableRule.html"><span>NegatableRule</span></a>
 			
 			</div>
 
