@@ -19,6 +19,7 @@
 
 class DecryptionRule extends RuleWithUserID
 {
+    use NegatableRule;
 
     public function __construct($owner, $fromTemplateXML=false)
     {
@@ -42,6 +43,9 @@ class DecryptionRule extends RuleWithUserID
         $this->destination = new AddressRuleContainer($this);
         $this->destination->name = 'destination';
         $this->destination->parentCentralStore = $this->parentAddressStore;
+
+        $this->services = new ServiceRuleContainer($this);
+        $this->services->name = 'service';
 
         if( $fromTemplateXML )
         {
@@ -67,19 +71,52 @@ class DecryptionRule extends RuleWithUserID
         $this->load_destination();
 
         $this->userID_loadUsersFromXml();
+        $this->_readNegationFromXml();
+
+        //										//
+        // Begin <service> extraction			//
+        //										//
+        $tmp = DH::findFirstElementOrCreate('service', $xml);
+        $this->services->load_from_domxml($tmp);
+        // end of <service> zone extraction
+
     }
 
-    public function display()
+    public function display($padding = 0)
     {
+        $padding = str_pad('', $padding);
+
         $dis = '';
         if( $this->disabled )
             $dis = '<disabled>';
 
-        print "*Rule named '".$this->name."  $dis\n";
-        print "  From: " .$this->from->toString_inline()."  |  To:  ".$this->to->toString_inline()."\n";
-        print "  Source: ".$this->source->toString_inline()."\n";
-        print "  Destination: ".$this->destination->toString_inline()."\n";
-        print "    Tags:  ".$this->tags->toString_inline()."\n";
+        $sourceNegated = '';
+        if( $this->sourceIsNegated() )
+            $sourceNegated = '*negated*';
+
+        $destinationNegated = '';
+        if( $this->destinationIsNegated() )
+            $destinationNegated = '*negated*';
+
+        print $padding."*Rule named '{$this->name}' $dis\n";
+        print $padding."  From: " .$this->from->toString_inline()."  |  To:  ".$this->to->toString_inline()."\n";
+        print $padding."  Source: $sourceNegated ".$this->source->toString_inline()."\n";
+        print $padding."  Destination: $destinationNegated ".$this->destination->toString_inline()."\n";
+        print $padding."  Service:  ".$this->services->toString_inline()."\n";
+        if( !$this->userID_IsCustom() )
+            print $padding."  User: *".$this->userID_type()."*\n";
+        else
+        {
+            $users = $this->userID_getUsers();
+            print $padding . " User:  " . PH::list_to_string($users) . "\n";
+        }
+        print $padding."  Tags:  ".$this->tags->toString_inline()."\n";
+
+        if( isset($this->_targets) )
+            print $padding."  Targets:  ".$this->targets_toString()."\n";
+
+        if( strlen($this->_description) > 0 )
+            print $padding."  Desc:  ".$this->_description."\n";
         print "\n";
     }
 
