@@ -6,6 +6,7 @@ CHANGELOG
 * PH::getPanObjectFromconfig() new helper function to load Panorama or Firewall conf
 * introduced plugin system for address/rules/services-edit.php
 * TagRuleContainer::copy new helper function to copy tags from one Rule to another
+* DecryptionRule class now supports service (introduced in PANOS6.1)
 
 utils:
 rules-edit : new filters 'target is.any' 'target has xxxxx/vsysX' 'snathost has xxxx' 'dnathost has xxxx' 'rule is.snat' 'rule is.dnat' 'rule is.snatbidir' 'snat is.static' 'snat is.dynamic-ip' 'snat is.dynamic-ip-and-port' 'natdstinterface is.set' 'rule is.universal' 'rule is.intrazone' 'rule is.interzone'
